--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3'
 
 services:
-  app:
+  api:
+    container_name: docker-lab-api
     build: .
     ports:
       - 3333:3333
-    # volumes:
-    #   - .:/code
+    volumes:
+      - ./:/app
