Melhorado comentarios do arquivo

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,18 @@
-HOST=127.0.0.1
+HOST=0.0.0.0
 PORT=3333
-NODE_ENV=development
 
+NODE_ENV=development
 APP_NAME=AdonisJs
 APP_URL=http://${HOST}:${PORT}
-
 CACHE_VIEWS=false
+APP_KEY=hiDGItxqYPawmSc5LCLPtAzlBA3l04gq
 
-APP_KEY=
-
-DB_CONNECTION=sqlite
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=adonis
+DB_CONNECTION=mysql # Informar driver de conexao adonis para banco de dados.
+DB_HOST=mysql-docker #informar como host o nome dado ao container mysql docker
+DB_PORT=3306 # informar porta a ser utilizada na aplicação.
+DB_USER=api_adonis # Informar nome de usuario default da aplicação.
+DB_PASSWORD=1234 #Informar senha de usuário default da aplicação.
+DB_ROOT_PASSWORD=1234 #Informar senha de usuário root MySQL criado na inicialização do container
+DB_DATABASE=api_adonis # Informar nome do database da aplicação.
 
 HASH_DRIVER=bcrypt
