--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 version: '3'
 
+# valores setados como variavel ${} , dever ser informadas no arquivo .env
+
 # Contaniner api adonis
 services:
   api:
     container_name: docker-lab-api
     build: .
     ports:
-      - 3333:3333
+      - ${PORT}:${PORT}
     volumes:
       - ./:/app
     networks: 
@@ -15,8 +17,7 @@ services:
         - mysqlsrv 
 
 # Container Mysql
-  mysqlsrv:
-    # container_name: mysql-docker
+  mysqlsrv:    
     container_name: mysql-docker
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
@@ -24,10 +25,9 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_USER: fernando
-      MYSQL_PASSWORD: pedro221104
-    ports:
-        # - "3308:3308"
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+    ports:        
         - "${DB_PORT}:${DB_PORT}"
     volumes:
       - /home/fernando/volumes/mysql:/var/lib/mysql  
