--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 HOST=0.0.0.0
+# HOST=127.0.0.1
 PORT=3333
 
 NODE_ENV=development
@@ -6,13 +7,19 @@ APP_NAME=AdonisJs
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=hiDGItxqYPawmSc5LCLPtAzlBA3l04gq
-
-DB_CONNECTION=mysql # Informar driver de conexao adonis para banco de dados.
-DB_HOST=mysql-docker #informar como host o nome dado ao container mysql docker
-DB_PORT=3306 # informar porta a ser utilizada na aplicação.
-DB_USER=api_adonis # Informar nome de usuario default da aplicação.
-DB_PASSWORD=1234 #Informar senha de usuário default da aplicação.
-DB_ROOT_PASSWORD=1234 #Informar senha de usuário root MySQL criado na inicialização do container
-DB_DATABASE=api_adonis # Informar nome do database da aplicação.
-
+# Informar driver de conexao adonis para banco de dados.
+DB_CONNECTION=mysql 
+#DB_HOST=127.0.0.1
+#informar como host o nome dado ao container mysql docker
+DB_HOST=mysql-docker
+# informar porta a ser utilizada na aplicação.
+DB_PORT=3306
+# Informar nome de usuario default da aplicação. 
+DB_USER=api 
+#Informar senha usuário default da aplicação.
+DB_PASSWORD=1234
+#Informar senha usuário root MySQL criado na inicialização do container
+DB_ROOT_PASSWORD=1234
+# Informar nome do database da aplicação. 
+DB_DATABASE=adonis 
 HASH_DRIVER=bcrypt
