--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: docker-lab-api
     build: .
     ports:
-      - ${PORT}:${PORT}
+      - "${PORT}:${PORT}"
     volumes:
       - ./:/app
     networks: 
