ajuste .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@ NODE_ENV=development
 APP_NAME=AdonisJs
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
-APP_KEY=hiDGItxqYPawmSc5LCLPtAzlBA3l04gq
+# Informar valor aleatorio para jwt
+APP_KEY=
 # Informar driver de conexao adonis para banco de dados.
 DB_CONNECTION=mysql 
 #DB_HOST=127.0.0.1
